--- a/Exercise.ipynb
+++ b/Exercise.ipynb
@@ -729,7 +729,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "firstName = input(\"Enter the first name:\")\n",
+    "lastName = input(\"Enter last name:\")\n",
+    "code = input(\"enter the ZIP code:\")\n",
+    "employee = input(\"enter the employee ID:\")\n",
+    "\n",
+    "def valid(q):\n",
+    "    valid1 = len(q)\n",
+    "    if valid1 <= 2:\n",
+    "        print(f\"{q} is not a valid name\")\n",
+    "\n",
+    "valid(firstName)\n",
+    "valid(lastName)\n",
+    "valid(code)\n",
+    "valid(employee)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -743,7 +758,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "i = 0\n",
+    "p = 0\n",
+    "\n",
+    "for i in range(5):\n",
+    "    sum = input(f\"enter the {i} number:\")\n",
+    "    p = p + sum\n",
+    "    \n",
+    "\n",
+    "print(f\"the sum of number is {p}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -757,7 +782,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "r = input(\"What is the rate of return: \")\n",
+    "i = 0\n",
+    "while i == ValueError:\n",
+    "    i = int(72 / r)\n",
+    "\n",
+    "else :\n",
+    "    i = int(72/r)\n",
+    "    print(f\"It will take {i} years to return\")"
+   ]
   },
   {
    "cell_type": "markdown",
